--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,14 @@ perl:
   - 5.10
   - 5.12
   - 5.18
-script: prove -I t/lib --lib --verbose --recurse t/
+
+before_script:
+    - psql -c 'create database nessy;' -U postgres
+    - git clone https://github.com/genome/nessy-server.git
+    - pushd nessy-server
+    - pip install -r requirements.txt
+    - LOCKING_DB='postgres://postgres@localhost/locking' ./devserver &
+    - popd
+
+script:
+    - NESSY_SERVER_URL=http://localhost:5000 prove -I t/lib --lib --verbose --recurse t/
