--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: perl
 perl:
   - 5.8
-  - 5.10
+  - "5.10"  # Without quotes this will use perl version 5.1
   - 5.12
   - 5.18
 script: prove -I t/lib --lib --verbose --recurse t/
