--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_script:
     - psql -c 'create database nessy;' -U postgres
     - git clone https://github.com/genome/nessy-server.git
     - pushd nessy-server
-    - pip install -r requirements.txt
+    - sudo pip install -r requirements.txt
     - LOCKING_DB='postgres://postgres@localhost/locking' ./devserver &
     - popd
 
