--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_script:
     - psql -c 'create database nessy;' -U postgres
     - git clone https://github.com/genome/nessy-server.git
     - pushd nessy-server
+    - git show HEAD
     - sudo pip install -r requirements.txt
     - LOCKING_DB='postgres://postgres@localhost/nessy' ./devserver &
     - popd
