--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ perl:
 
 before_script:
     - psql -c 'create database nessy;' -U postgres
-    - git clone https://github.com/genome/nessy-server.git
+    - git clone --depth 1 https://github.com/genome/nessy-server.git
     - pushd nessy-server
     - git show HEAD
     - sudo pip install -r requirements.txt
